...
    "minimumOutputUsd": "Minimum output (USD)",
    "slippage": "Slippage"
  },
  "Start": {
    "createAccount": "Create new account",
    "importAccount": "Import account",
    "signIn": "Sign in",
    "title": "Start",
    "watchAddress": "Watch address"
  },
  "StartWatch": {
    "watchAddress": "Watch address"
  },
...
