...
    "title": "送金",
    "totalFee": "合計手数料",
    "totalFeeAmount": "${{amount}}"
  },
  "SendConfirmSheet": {
    "confirm": "送金",
    "send": "送金"
  },
  "SendToCard": {
    "sendTo": "送信先"
  },
  "Settings": {
    "advanced": "詳細設定",
...
    "headerBackTitle": "戻る",
    "invalidAddress": "無効なアドレス",
    "invalidInput": "無効な入力",
    "invalidMnemonic": "無効なニーモニック",
    "invalidPrivateKey": "無効な秘密鍵",
    "mnemonicNotFound": "ニーモニックが見つかりません",
    "next": "次へ",
    "noTokensFound": "トークンが見つかりません",
    "paste": "ペースト",
    "privateKeyNotFound": "秘密鍵が見つかりません",
    "searchForToken": "トークンを検索",
    "send": "送信",
    "usd": "USD"
...
