appId: com.raylac.dev
---
- launchApp
- runFlow: sign-in.yaml
- tapOn:
    id: deposit
- tapOn:
    id: get-deposit-address
- tapOn:
    id: copy-address
- tapOn:
    id: past-deposit-addresses
- assertVisible: 'Addresses'

